don't use StandardCharsets.UTF_8 , requires API level 33